diesel-builders/tests/ui/ancestor_is_self_error.rs
use diesel::prelude::*;
use diesel_builders::prelude::*;

#[derive(Debug, Queryable, Clone, Selectable, Identifiable, PartialEq, PartialOrd, TableModel)]
#[diesel(table_name = dogs)]
#[table_model(ancestors(dogs::table))]
pub struct Dog {
    id: i32,
    breed: String,
}

fn main() {}
